--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "eslint": "^8.29.0",
     "express": "^4.18.2",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.29.0",
     "nodemon": "^2.0.20"
   }
 }
