--- a/package.json
+++ b/package.json
@@ -4,12 +4,26 @@
   "description": "my first server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "type": "module",
+  "jest": {
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "src"
+    ]
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
@@ -17,9 +31,18 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@faker-js/faker": "^7.6.0",
+    "@jest/globals": "^29.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^29.3.1",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^8.29.0",
-    "nodemon": "^2.0.20"
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "superagent": "^8.0.8",
+    "supertest": "^6.3.3"
   }
 }
